--- a/src/pages/HomePage/Banner/Banner.css
+++ b/src/pages/HomePage/Banner/Banner.css
@@ -1,9 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 .img {
-  width: 1440px;
-  height: 540px;
   top: 72px;
   gap: 0px;
   opacity: 0px;
+
   background: linear-gradient(
     180deg,
     rgba(0, 0, 0, 0.45) 0%,
@@ -37,4 +38,21 @@
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
+}
+
+figcaption {
+  position: absolute;
+  bottom: 2rem;
+  color: white;
+  margin: 0 3rem;
+}
+
+@media screen and (max-width: 768px) {
+  figcaption {
+    position: inherit;
+    bottom: inherit;
+    margin: 0.5rem 1rem;
+    font-size: inherit;
+    color: inherit;
+  }
 }
