--- a/src/pages/HomePage/Posts/custom.css
+++ b/src/pages/HomePage/Posts/custom.css
@@ -7,3 +7,61 @@
   border: 1px;
   background-color: aliceblue;
 }
+.card {
+  border: 2px;
+}
+.h1 {
+  font-family: IBM Plex Sans;
+  font-size: 18px;
+  line-height: 23.4px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #525252;
+}
+.h2 {
+  font-family: IBM Plex Sans;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18.2px;
+  text-align: right;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #525252;
+}
+.button {
+  width: 652px;
+  height: 38px;
+  top: 1956px;
+  left: 220px;
+  gap: 0px;
+  border: 2px;
+  border-radius: 8px 0px 0px 0px;
+  border: 0.7px 0px 0px 0px;
+  opacity: 0px;
+  margin: auto;
+}
+.location {
+  font-family: IBM Plex Sans;
+  font-size: 20px;
+  line-height: 18.2px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+.pen {
+  font-size: 15px;
+  height: 10px;
+  top: 2.5px;
+  left: 2.5px;
+  gap: 0px;
+  opacity: 0px;
+}
+.p {
+  font-family: IBM Plex Sans;
+  font-size: 10px;
+  line-height: 15.6px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
